--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                         class="col-xs-12 col-md-3 col-md-offset-1"
                         style="background-color: #91D0EF;"
                     >
-                                                    <h1>profile</h1>
+                                                    <h1>プロファイル</h1>
+<p>I am boy.</p>
 
                                             </div>
                                                                     <div id="blog-recent" class="col-md-3 col-md-offset-1 hidden-sm-down"
